footer hübsch gemacht

--- a/_config.yml
+++ b/_config.yml
@@ -35,8 +35,8 @@ color:
 # Footer settings
 footer:
   copyright: Sweta Moser
-  location: Location
-  social: Around the Web
+  location: Ort
+  social: Netzwerke
   credits: Credits
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
@@ -51,11 +51,13 @@ social:
 #    url: http://bitbucket.org/jekyll
 #  - title: github
 #    url: http://github.com/jekyll
+  - title: linkedin
+    url: https://www.linkedin.com/in/sweta-moser/
 
 # Postal address (add as many lines as necessary)
 address:
-  - line: 3481 Melrose Place
-  - line: Beverly Hills, CA 90210
+  - line: Dresden, Sachsen
+  - line: und darüber hinaus
 
 # Credits content
 credits: 'Freelancer is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.'
