--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ title: Sweta Moser
 email: sweta.moser@posteo.de
 url: https://swetamoser.github.io
 description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
-keywords: "Mediation, GfK, Gewaltfreie Kommunikation"
-skills: "Mediation und Gewaltfreie Kommunikation"
+keywords: "Mediation, GfK, Gewaltfreie Kommunikation, Streitschlichtung, Schlichtung"
+skills: " Verständigung durch Gewaltfreie Kommunikation und Mediation"
 meta_author: Sweta Moser
 
 # Google webmaster tools
