--- a/_config.yml
+++ b/_config.yml
@@ -27,10 +27,10 @@ disqus_shortname: myshortname
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
-  primary: 18bc9c #80B3FF
+  primary: 4DA1A9 #80B3FF
   primary-rgb: "24,288,156" #"128,179,255"
-  secondary: 2c3e50 #FD6E8A
-  secondary-dark: 233140 #A2122F
+  secondary: 611C35 #FD6E8A
+  secondary-dark: FFA630	 #A2122F
   header: url(img/portfolio/conversation.png)
 
 
